@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclIntDecls.h,v 1.29 2001/09/27 20:32:35 dgp Exp $
+ * RCS: @(#) $Id: tclIntDecls.h,v 1.30 2001/10/15 20:26:57 andreas_kupries Exp $
  */
 
 #ifndef _TCLINTDECLS
@@ -488,6 +488,10 @@ EXTERN int		TclChannelTransform _ANSI_ARGS_((Tcl_Interp * interp,
 EXTERN void		TclChannelEventScriptInvoker _ANSI_ARGS_((
 				ClientData clientData, int flags));
 /* 163 */
+EXTERN void *		TclGetInstructionTable _ANSI_ARGS_((void));
+/* 164 */
+EXTERN void		TclExpandCodeArray _ANSI_ARGS_((void * envPtr));
+/* 165 */
 EXTERN void		TclpSetInitialEncodings _ANSI_ARGS_((void));
 
 typedef struct TclIntStubs {
@@ -689,7 +693,9 @@ typedef struct TclIntStubs {
     void *reserved160;
     int (*tclChannelTransform) _ANSI_ARGS_((Tcl_Interp * interp, Tcl_Channel chan, Tcl_Obj * cmdObjPtr)); /* 161 */
     void (*tclChannelEventScriptInvoker) _ANSI_ARGS_((ClientData clientData, int flags)); /* 162 */
-    void (*tclpSetInitialEncodings) _ANSI_ARGS_((void)); /* 163 */
+    void * (*tclGetInstructionTable) _ANSI_ARGS_((void)); /* 163 */
+    void (*tclExpandCodeArray) _ANSI_ARGS_((void * envPtr)); /* 164 */
+    void (*tclpSetInitialEncodings) _ANSI_ARGS_((void)); /* 165 */
 } TclIntStubs;
 
 #ifdef __cplusplus
@@ -1282,9 +1288,17 @@ extern TclIntStubs *tclIntStubsPtr;
 #define TclChannelEventScriptInvoker \
 	(tclIntStubsPtr->tclChannelEventScriptInvoker) /* 162 */
 #endif
+#ifndef TclGetInstructionTable
+#define TclGetInstructionTable \
+	(tclIntStubsPtr->tclGetInstructionTable) /* 163 */
+#endif
+#ifndef TclExpandCodeArray
+#define TclExpandCodeArray \
+	(tclIntStubsPtr->tclExpandCodeArray) /* 164 */
+#endif
 #ifndef TclpSetInitialEncodings
 #define TclpSetInitialEncodings \
-	(tclIntStubsPtr->tclpSetInitialEncodings) /* 163 */
+	(tclIntStubsPtr->tclpSetInitialEncodings) /* 165 */
 #endif
 
 #endif /* defined(USE_TCL_STUBS) && !defined(USE_TCL_STUB_PROCS) */
